Se agregan endpoints
